--- a/14.Presto_Readme.md
+++ b/14.Presto_Readme.md
@@ -9,15 +9,18 @@ weget https://repo1.maven.org/maven2/com/facebook/presto/presto-server/0.267/pre
 tar -xvf XXX.tar.gz
 ```
 
-#### Config
+### Config
 
 https://prestodb.io/docs/current/installation/deployment.html
 
 ```
 for config sample, goes to github repository
+https://github.com/yongzhixu/HadoopTutorial
 ```
 
-#### Set up command line
+https://github.com/yongzhixu/HadoopTutorial
+
+### Set up command line
 
 https://prestodb.io/docs/current/installation/cli.html
 
@@ -35,7 +38,7 @@ http://127.0.0.1:8090/
 
 
 
-#### Connect to hive from CLI
+### Connect to hive from CLI
 
 - [HIVE Connector](https://www.tutorialspoint.com/apache_presto/apache_presto_hive_connector.htm)
 
@@ -43,7 +46,7 @@ http://127.0.0.1:8090/
 bin/presto --server 127.0.0.1:8090 --catalog hive
 ```
 
-- query hive via presto
+### Query hive via presto
 
 ```sql
 show tables from foodmart;
@@ -52,8 +55,6 @@ select * from foodmart.movies limit 10;
 
 - you can check the execution history from http://127.0.0.1:8090/
 
-
-
 - quit
 
 ```sh
@@ -61,74 +62,52 @@ quit
 bin/launcher stop
 ```
 
+## Joint query Cassandra and Hive
 
+### Set up connection with cassandra
 
-### Access via shell
+```
+cd presto-server-version
+cd etc/catlog
+vi cassandra.properties
+```
 
-#### Query
+- cassandra.properties
+
+```properties
+connector.name=cassandra
+cassandra.contact-points=127.0.0.1
+```
+
+### Connect to hive and cassandra
+
+```sh
+cd ../../
+bin/launcher start
+bin/presto --server 127.0.0.1:8090 --catalog hive,cassandra 
+```
+
+### Query Play
 
 ```sql
--- show tables
-!tables
+-- separate query
+show tables from cassandra.movielens;
+describe cassandra.movielens.users;
+select * from cassandra.movielens.users limit 10;
+select * from hive.default.ratings limit 10;
 
-CREATE TABLE IF NOT EXISTS us_population(
-	state CHAR(2) NOT NULL, 
-	city VARCHAR NOT NULL,
-	population BIGINT
-	CONSTRAINT my_pk PRIMARY KEY (state, city)
-	);
--- double check
-!tables;
+-- joint query
+select u.occupation, COUNT(*) AS numRatings FROM hive.movielens.ratings r JOIN cassandra.movielens.users u ON r.user_id = u.user_id GROUP BY u.occupation; 
+```
 
--- insert data
-UPSERT INTO US_POPULATION VALUES ('NY', 'New York', 8823192);
-UPSERT INTO US_POPULATION VALUES ('CA', 'los Angeles', 3823192);
+### Stop service
 
-SELECT * FROM US_POPULATION WHERE city ='CA'
-
--- clean table 
-DROP TABLE US_POPULATION;
-
-!quit;
+```sh
+-- quit presto
+bin/launcher stop
+-- stop cassandra
+service cassandra stop
 ```
 
 
-
-### Phoenix with pig
-
-#### Prepare table
-
--- phoenix shell
-
-```SQL
-CREATE TABLE IF NOT EXISTS users(
-	USERID INTEGER NOT NULL, 
-	AGE INTEGER, 
-	GENDER CHAR(1),
-	OCCUPATION VARCHAR,
-	ZIP VARCHAR 
-	CONSTRAINT my_pk PRIMARY KEY (USERID)
-	);
-
-!tables
--- run pig script
-pig 13_phoenix.pig
-```
-
-### Import data into hbase using phoenix
-
-[13_phoenix.pig.pig](https://github.com/yongzhixu/HadoopTutorial/blob/main/13_phoenix.pig)
-
-
-
-### Q
-
-#### Pig-Hbase vs Pig-Phoenix-HBase
-
-```markdown
-The answer will depends on where we want to result to be saved, 
-in the first case it can be stored in HDFS and 
-in the second case it will be stored in HBase 
-**so** this is based on the destination.
-```
 
