--- a/6_1.MySQL and Sqoop.md
+++ b/6_1.MySQL and Sqoop.md
@@ -56,6 +56,7 @@ wget http://media.sundog-soft.com/hadoop/movielens.sql
 Load data
 
 ```sql
+-- mysql shell
 SET NAMES 'utf8';
 SET CHARACTER SET utf8;
 use movielens;
