--- a/0.0.All in One.md
+++ b/0.0.All in One.md
@@ -2,6 +2,20 @@
 
 # Hadoop Ecosystem
 
+## Manager
+
+### [Zookeeper](https://www.tutorialspoint.com/zookeeper/index.htm)
+
+- keep track of information that must be synchronized across your cluster
+
+### [Oozie](https://www.tutorialspoint.com/apache_oozie/apache_oozie_introduction.htm)
+
+- Apache Oozie is the tool in which all sort of programs can be **pipelined** in a desired order to work in Hadoop’s distributed environment. 
+
+
+
+
+
 ## Hadoop Core
 
 ### [HDFS](https://www.tutorialspoint.com/hadoop/hadoop_hdfs_overview.htm)
