--- a/0.0.All in One.md
+++ b/0.0.All in One.md
@@ -10,7 +10,10 @@
 
 ### [Oozie](https://www.tutorialspoint.com/apache_oozie/apache_oozie_introduction.htm)
 
+**Orchestrating** your Hadoop jobs
+
 - Apache Oozie is the tool in which all sort of programs can be **pipelined** in a desired order to work in Hadoop’s distributed environment. 
+- job queuing, **scheduler**, bunble
 
 
 
