--- a/19.Oozie_Readme.md
+++ b/19.Oozie_Readme.md
@@ -1,8 +1,59 @@
+[TOC]
 
+## Set up Oozie Web Console
+
+- stop oozie server from admin dashboard
+- run the following commands
+
+```sh
+wget http://archive.cloudera.com/gplextras/misc/ext-2.2.zip
+sudo cp ext-2.2.zip /usr/hdp/current/oozie-client/libext/
+sudo chown oozie:hadoop /usr/hdp/current/oozie-client/libext/ext-2.2.zip 
+sudo -u oozie /usr/hdp/current/oozie-server/bin/oozie-setup.sh  prepare-war
+
+```
+
+
+
+## Set Mysql Tables
 
 ```sql
 -- login mysql
 mysqld -u root -p 
 
+-- check MYSQL and Sqoop for details
+create database movielens;
+SET NAMES 'utf8';
+SET CHARACTER SET utf8;
+use movielens;
+source movielens.sql;
+show tables;
+select * from movies limit 10;
+```
+
+
+
+## Prepare Files
+
+```sh
+-- upload workflow.xml to home directory
+hadoop fs -put workflow.xml /user/maria_dev
+-- upload oldmovies.sql to home directory
+hadoop fs -put oldmovies.sql /user/maria_dev
+
+-- upload mysql-connector-java.jar oozie...sqoop folder (hadoop fs or hdfs ui check the path)
+hadoop fs -put  /usr/share/java/mysql-connector-java.jar  /user/oozie/share/lib/lib_20180618160835/sqoop
+
+```
+
+- restart oozie,  make sure it pick up the mysql-connector-java.jar 
+
+
+
+## Run Oozie Job
+
+```sh
+-- under folder (where xml and job.properties is )
+ooozie job -oozie http://localhost:11000/oozie -config /home/maria_dev/job.properties -run 
 ```
 
