--- a/0.0.All in One.md
+++ b/0.0.All in One.md
@@ -4,6 +4,10 @@
 
 ## Manager
 
+### [Ambari](https://docs.cloudera.com/HDPDocuments/Ambari/Ambari-2.4.1.0/)
+
+- management and query / files UI
+
 ### [Zookeeper](https://www.tutorialspoint.com/zookeeper/index.htm)
 
 - keep track of information that must be synchronized across your cluster
@@ -15,7 +19,13 @@
 - Apache Oozie is the tool in which all sort of programs can be **pipelined** in a desired order to work in Hadoop’s distributed environment. 
 - job queuing, **scheduler**, bunble
 
+### [Zeppelin]()
 
+- notebook for hortonworks
+
+### [Hue](https://gethue.com/)
+
+- notebook  files/query UI for cloudera
 
 
 
@@ -94,4 +104,16 @@ Distributing queries across different data stores.
 
 
 ### [Apache Kudu](https://kudu.apache.org/docs/quickstart.html)
+
+
+
+## Sreaming
+
+
+
+### [Kafka](https://kafka.apache.org/documentation/)
+
+
+
+### [Flume]()
 
