--- a/0.0.All in One.md
+++ b/0.0.All in One.md
@@ -19,7 +19,7 @@
 - Apache Oozie is the tool in which all sort of programs can be **pipelined** in a desired order to work in Hadoop’s distributed environment. 
 - job queuing, **scheduler**, bunble
 
-### [Zeppelin]()
+### [Zeppelin](https://zeppelin.apache.org/contribution/documentation.html)
 
 - notebook for hortonworks
 
@@ -115,5 +115,5 @@ Distributing queries across different data stores.
 
 
 
-### [Flume]()
+### [Flume](https://flume.apache.org/documentation.html)
 
