--- a/24.Flume_Readme.md
+++ b/24.Flume_Readme.md
@@ -1,1 +1,25 @@
 
+
+### Set up Flume config
+
+https://github.com/yongzhixu/HadoopTutorial/blob/main/24.flumelogs.conf
+
+
+
+### Start up Flume Agent
+
+```sh
+cd /usr/hdp/current/flume-server/
+bin/flume-ng agent --conf conf --conf-file  path-to/flumelogs.conf --name a1 -Dflume.root.logger=INFO, console
+
+
+telnet localhost:44444
+-- type any message then it will appear on the flume agent console window set up by above command (did not work for hdp 2.6.5)
+
+```
+
+
+
+```
+```
+
