--- a/24.Flume_Readme.md
+++ b/24.Flume_Readme.md
@@ -1,12 +1,10 @@
 
 
-### Set up Flume config
-
-https://github.com/yongzhixu/HadoopTutorial/blob/main/24.flumelogs.conf
-
 
 
 ### Start up Flume Agent
+
+https://github.com/yongzhixu/HadoopTutorial/blob/main/24.example.conf
 
 ```sh
 cd /usr/hdp/current/flume-server/
@@ -18,7 +16,11 @@ telnet localhost:44444
 
 ```
 
+### Set up Flume dir to hdfs
 
+- Set up Flume monitor to a dir and store its data in HDFS
+
+https://github.com/yongzhixu/HadoopTutorial/blob/main/24.flumelogs.conf
 
 ```
 ```
