spark stream status aggregating

--- a/25.Spark_Flume_Readme.md
+++ b/25.Spark_Flume_Readme.md
@@ -9,7 +9,8 @@ https://github.com/yongzhixu/HadoopTutorial/blob/main/24.example.conf
 # under home dir
 mkdir checkpoint
 
-spark-submit --packages org.apache.spark:spark-streaming-flume_2.11:2.0.0 SparkFlume.py
+# use spark 2.3 for hdp 2.6.5
+spark-submit --packages org.apache.spark:spark-streaming-flume_2.11:2.3.0 SparkFlume.py
 
 -- another consle 
 -- run following command, start flume
