--- a/0.0.All in One.md
+++ b/0.0.All in One.md
@@ -45,7 +45,7 @@ Reduce: aggregate
 
 - Pig introduces Pig Latin, a scripting language that lets you use SQL-like syntax to define your map and reduce steps.
 
-### [Spark]()
+### [Spark](https://spark.apache.org/documentation.html)
 
 - A fast and general engine for large-scale data processing"
 - for data analyzing 
@@ -116,4 +116,19 @@ Distributing queries across different data stores.
 
 
 ### [Flume](https://flume.apache.org/documentation.html)
+
+
+
+### [Spark streaming](https://spark.apache.org/docs/latest/streaming-programming-guide.html)
+
+- live/streaming data processing
+- data unit: batch
+- Processing continuous streams of data in near-real-time(storm can do it in sub-second latency, quicker)
+
+### [Storm](https://spark.apache.org/docs/latest/streaming-programming-guide.html)
+
+- live/streaming data processing
+- data unit: event
+- Works on individual events, not micro-batches (like Spark Streaming does)
+	- If you need sub-second latency, Storm is for you
 
