--- a/24.Flume_Readme.md
+++ b/24.Flume_Readme.md
@@ -8,7 +8,7 @@ https://github.com/yongzhixu/HadoopTutorial/blob/main/24.example.conf
 
 ```sh
 cd /usr/hdp/current/flume-server/
-bin/flume-ng agent --conf conf --conf-file  path-to/flumelogs.conf --name a1 -Dflume.root.logger=INFO, console
+bin/flume-ng agent --conf conf --conf-file  path-to/example.conf --name a1 -Dflume.root.logger=INFO, console
 
 
 telnet localhost:44444
