--- a/0.0.All in One.md
+++ b/0.0.All in One.md
@@ -85,7 +85,11 @@ Distributing queries across different data stores.
 - access to cassandra,  Hive, MongoDB, MYSQL, posrgreSQL, kafka
 - combine data from multiple databases, as drill
 
-### [Impala](https://www.tutorialspoint.com/impala/index.htm)
+### [Impala](https://impala.apache.org/index.html)
+
+[Tutorial](https://www.tutorialspoint.com/impala/index.htm)
+
+[installing](https://impala.apache.org/docs/build/html/topics/impala_install.html)
 
 - Cloudera’s alternative to Hive
 
@@ -136,8 +140,4 @@ Distributing queries across different data stores.
 
 - live/streaming data processing
 - faster than storm
-
-
-
-
 
